2015-06-12  Sherine Awad  <drmahmoud@ucdavis.edu>

   * Fix bug in naming in interleave-reads.py 

2015-06-12  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * setup.py: update screed version to 0.9

2015-06-12  Luiz Irber  <khmer@luizirber.org>

   * *.py: refactor for Python 3 compatibility. Clear separation of Unicode
   and Byte strings, use __future__ imports for compatibility (print function,
   absolute imports, unicode_literals), fix tests to consider changes to random
   number generator between Python versions.
   * khmer/_khmer.cc: rename file, methods return Unicode strings instead of
   Bytestrings.

2015-06-12  Luiz Irber  <khmer@luizirber.org>

   * khmer/{khmermodule.cc},tests/test_hashbits.py: Add Unicode support to
   hashbits.get method.
   * tests/test_hll.py: Avoid using translate for revcomp calculation.

2015-06-12  Sarah Guermond  <sarah.guermond@gmail.com>

   * scripts/trim-low-abund.py: changed _screed_record_dict to Record

2015-06-11  Sherine Awad  <drmahmoud@ucdavis.edu>

   * Change split-paired-reads.py to accept input from stdin.
   * Add test function to test new behavior of split-paired.

2015-06-10  Camille Scott  <camille.scott.w@gmail.com>

   * lib/hashtable.cc: Tweaked median_at_least to reduce number of
   conditional checks.

2015-06-10  Titus Brown  <titus@idyll.org>

   * scripts/find-knots.py: fixed invocation of check_space to take correct
   arguments.
   * tests/test_scripts.py: added simple test of find-knots.py execution.

2015-06-09  Jacob Fenton  <bocajnotnef@gmail.com>

   * scripts/normalize-by-median.py: implemented broken_paired_reader
   * tests/test_scripts.py: modified tests to properly use new args
   * khmer/utils.py: added force-paired option to broken_paired_reader (@ctb)

2015-06-09   Luiz Irber  <khmer@luizirber.org>

   * khmer/_khmermodule.cc, lib/hashtable.{cc,hh}: astyle fixes.

2015-06-09  Titus Brown  <titus@idyll.org>

   * khmer/_khmermodule.cc: fixed nasty Hashtable.get() bug.